test_regress/t/t_var_port_bad.out
%Error: t/t_var_port_bad.v:27:12: Input/output/inout does not appear in port list: 'b'
   27 |   input a, b;
      |            ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
